Fixes columns wrapping

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -6,7 +6,7 @@
   padding: 0;
   list-style-type: none;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
   gap: 8px;
 }
 
